--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,11 @@ a {
 ul {
   list-style: none;
 }
+.col-8 {
+  width: 66.67%;
+  padding: 0 15px;
+  float: left;
+}
 .col-6 {
   width: 50%;
   padding: 0 15px;
@@ -214,14 +219,14 @@ p {
 #team {
   background: #fffaf6;
 }
-.team_top {
+.title {
   text-align: center;
 }
-.team_top h3 {
+.title h3 {
   font-size: 37px;
   color: #333333;
 }
-.team_top p {
+.title p {
   width: 50%;
   margin: 0 auto;
   padding: 20px 0 0;
@@ -273,4 +278,182 @@ p {
 }
 .team_bottom {
   padding: 40px 0 0;
+}
+
+.blog_inr {
+  padding: 100px 0;
+}
+.blog_col_content_top a {
+  font-size: 22px;
+  font-weight: bold;
+  color: #333333;
+  line-height: 34px;
+}
+.blog_col_content {
+  border: 1px solid #dddddd;
+}
+.blog_col_content_top span {
+  font-size: 16px;
+  color: #777777;
+  font-style: italic;
+  padding: 5px 0 0;
+  display: block;
+}
+.blog_col_content_top {
+  padding: 20px;
+  border-bottom: 1px solid #dddddd;
+}
+.blog_col_content_bottom {
+  padding: 20px;
+}
+.blog_content_left_img {
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  vertical-align: middle;
+}
+.blog_content_left_img img {
+  border-radius: 50%;
+}
+.blog_left_img_title {
+  display: inline-block;
+  vertical-align: middle;
+  padding-left: 15px;
+}
+.blog_left_img_title a {
+  font-size: 17px;
+  text-transform: uppercase;
+  color: #333333;
+}
+.blog_col_content_bottom_left {
+  display: inline-block;
+  vertical-align: middle;
+  width: 68%;
+}
+.blog_col_content_bottom_right {
+  display: inline-block;
+  vertical-align: middle;
+  width: 30%;
+  text-align: right;
+}
+.blog_col_content_bottom_right ul li {
+  display: inline-block;
+  padding: 0 8px;
+}
+.blog_col_content_bottom_right ul li a {
+  width: 17px;
+  height: 17px;
+}
+.blog_bottom {
+  padding: 50px 0 0;
+}
+.blog_col_inr {
+  box-shadow: 0 15px 21px 0 rgba(254, 119, 101, 0.06);
+}
+
+.contact_title {
+  text-align: center;
+  font-size: 55px;
+  font-weight: bold;
+  color: #333333;
+}
+.contact_box {
+  box-shadow: 0 0 40px 0 rgba(156, 156, 156, 0.25);
+  background-color: #fff;
+  padding: 30px;
+  margin: 60px 0 0;
+}
+.contact_box_left h3 {
+  color: #333333;
+  font-weight: bold;
+  font-size: 30px;
+}
+.contact_box_info ul li {
+  padding: 15px 0 15px 40px;
+  font-size: 20px;
+  color: #777777;
+  font-weight: bold;
+  position: relative;
+}
+.contact_box_info {
+  margin: 15px 0 0;
+}
+.contact_box_info ul li.phone::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 17px;
+  width: 20px;
+  height: 20px;
+  background: url(../image/phone.png);
+}
+.contact_box_info ul li.mail::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 18px;
+  width: 20px;
+  height: 20px;
+  background: url(../image/mail.png);
+}
+.contact_box_info ul li.address::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 16px;
+  width: 20px;
+  height: 20px;
+  background: url(../image/address.png);
+}
+.contact_box_form {
+  padding: 10px 15px;
+  margin-left: -3px;
+}
+.contact_box_form.half_width {
+  width: 50%;
+  display: inline-block;
+}
+.contact_box_form input {
+  width: 100%;
+  height: 55px;
+  border: 1px solid #dddddd;
+  background: #f7f7ff;
+  padding: 0 20px;
+  font-size: 16px;
+  color: #777777;
+}
+.contact_box_form input::placeholder {
+  font-size: 16px;
+  color: #777777;
+}
+.contact_box_form textarea::placeholder {
+  font-size: 16px;
+  color: #777777;
+}
+.contact_box_form textarea {
+  width: 100%;
+  height: 155px;
+  border: 1px solid #dddddd;
+  background: #f7f7ff;
+  padding: 20px;
+  font-size: 16px;
+  color: #777777;
+  resize: none;
+}
+.contact_btn {
+  padding: 20px 15px 0;
+}
+.contact_btn button {
+  background: #fe7865;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 16px;
+  height: 50px;
+  padding: 0 35px;
+  border: 1px solid #fe7865;
+  cursor: pointer;
+}
+.contact_btn button:hover {
+  background: #ffffff;
+  color: #fe7865;
 }
