--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,11 @@ ul {
   padding: 0 15px;
   float: left;
 }
+.col-2 {
+  width: 16.67%;
+  padding: 0 15px;
+  float: left;
+}
 .clearfix {
   clear: both;
   margin: 0 -15px;
@@ -455,5 +460,150 @@ p {
 }
 .contact_btn button:hover {
   background: #ffffff;
+  color: #fe7865;
+}
+#contact_us {
+  position: relative;
+  z-index: 2;
+}
+
+#footer {
+  position: relative;
+  z-index: 1;
+}
+#footer::before {
+  content: "";
+  bottom: 0;
+  left: 0;
+  background: url(../image/footer-bg.png);
+  z-index: -1;
+  background-size: 100% 100%;
+  height: 770px;
+  right: 0;
+  position: absolute;
+}
+.footer_social {
+  padding: 15px 0 0;
+}
+.footer_social ul li {
+  display: inline-block;
+  margin: 0 5px;
+}
+.footer_social ul li:first-child {
+  margin-left: 0;
+}
+.footer_social ul li a {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  text-align: center;
+  background: #ffffff;
+  line-height: 35px;
+  position: relative;
+  box-shadow: 0 5px 21px 0 rgba(254, 119, 101, 0.2);
+}
+.footer_social ul li a:hover {
+  background: #fe7865;
+}
+.footer_social ul li a img {
+  vertical-align: middle;
+}
+.footer_social .footer_fb a::before {
+  content: "";
+  position: absolute;
+  background: url(../image/facebook.png);
+  width: 16px;
+  height: 16px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.footer_social .footer_twitter a::before {
+  content: "";
+  position: absolute;
+  background: url(../image/twitter.png);
+  width: 16px;
+  height: 16px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.footer_social .footer_insta a::before {
+  content: "";
+  position: absolute;
+  background: url(../image/insta.png);
+  width: 16px;
+  height: 16px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.footer_social .footer_fb a:hover::before {
+  background: url(../image/facebook_hover.png);
+}
+.footer_social .footer_insta a:hover::before {
+  background: url(../image/insta_hover.png);
+}
+.footer_social .footer_twitter a:hover::before {
+  background: url(../image/twitter_hover.png);
+}
+.footer_content p {
+  width: 95%;
+}
+.footer_col h4 {
+  color: #333333;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 10px 0 0;
+}
+.footer_link ul li {
+  padding: 8px 0;
+}
+.footer_link ul li a {
+  font-size: 18px;
+  color: #777777;
+}
+.footer_link {
+  padding: 8px 0 0;
+}
+.footer_link ul li a:hover {
+  color: #fe7865;
+}
+.footer_contact {
+  padding: 8px 0 0;
+}
+.footer_contact ul li h6 {
+  font-size: 18px;
+  color: #777777;
+  display: inline-block;
+  vertical-align: top;
+  font-weight: 400;
+  line-height: 26px;
+  width: 30%;
+}
+.footer_contact_info {
+  width: 68%;
+  display: inline-block;
+  vertical-align: top;
+}
+.footer_contact_info p {
+  font-size: 18px;
+  color: #777777;
+}
+.footer_contact ul li {
+  padding: 5px 0;
+}
+.footer_top {
+  padding: 75px 0 120px;
+}
+.footer_bottom {
+  border-top: 1px solid #777777;
+  text-align: center;
+  padding: 20px 0;
+}
+.footer_bottom p {
+  color: #333333;
+}
+.footer_bottom p a {
   color: #fe7865;
 }
